--- a/scss/mixins/_dropdown.scss
+++ b/scss/mixins/_dropdown.scss
@@ -1,3 +1,29 @@
+@mixin dropdown-header {
+  font-size: $dropdown-font-size;
+  font-weight: bolder;
+  line-height: $dropdown-line-height;
+  margin: 0;
+  padding: $dropdown-link-padding-y $dropdown-link-padding-x;
+  white-space: nowrap;
+}
+
+@mixin dropdown-header-sm {
+  font-size: $dropdown-font-size-sm;
+  line-height: $dropdown-line-height-sm;
+  padding: $dropdown-link-padding-y-sm $dropdown-link-padding-x-sm;
+}
+
+@mixin dropdown-link {
+  display: block;
+  font-size: inherit;
+  line-height: inherit;
+  padding: $dropdown-link-padding-y $dropdown-link-padding-x;
+}
+
+@mixin dropdown-link-sm {
+  padding: $dropdown-link-padding-y-sm $dropdown-link-padding-x-sm;
+}
+
 @mixin dropdown-menu {
   background-clip: padding-box;
   background-color: color-chooser($dropdown-bg-dark, $dropdown-bg-light);
@@ -6,35 +32,10 @@
   font-size: $dropdown-font-size;
   line-height: $dropdown-line-height;
   padding: $dropdown-padding-y $dropdown-padding-x;
-
-  a {
-    font-size: inherit;
-    line-height: inherit;
-    padding: $dropdown-link-padding-y $dropdown-link-padding-x;
-  }
-
-  li,
-  .active {
-    > a {
-      @include focus-hover {
-        background-color: color-chooser($dropdown-link-bg-hover-dark, $dropdown-link-bg-hover-light);
-      }
-    }
-  }
-
-  .active {
-    > a {
-      background-color: color-chooser($dropdown-link-bg-hover-dark, $dropdown-link-bg-hover-light);
-    }
-  }
 }
 
 @mixin dropdown-menu-sm {
   font-size: $dropdown-font-size-sm;
   line-height: $dropdown-line-height-sm;
   padding: $dropdown-padding-y-sm $dropdown-padding-x-sm;
-
-  a {
-    padding: $dropdown-link-padding-y-sm $dropdown-link-padding-x-sm;
-  }
 }
