--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -7,6 +7,13 @@
 body {
   font-size: $font-size-base;
   line-height: $line-height-base;
+
+  button,
+  input,
+  select,
+  textarea {
+    font-family: $font-family-sans-serif;
+  }
 }
 
 html {
