WIP: post styles
fix dropdown link sizing issue

--- a/common/common.scss
+++ b/common/common.scss
@@ -1541,6 +1541,9 @@ nav.post-controls .actions button .read-icon::before {
   line-height: 1.5;
   padding: 16px 0;
 }
+#topic-footer-buttons .dropdown-menu a {
+  padding: 6.25px 24px;
+}
 #topic-footer-buttons .fa {
   font-family: 'Material Icons';
   -webkit-font-feature-settings: 'liga';
