--- a/scss/common.scss
+++ b/scss/common.scss
@@ -15,6 +15,7 @@
 // - Menu panel
 // - Notification
 // - Post
+// - Timeline
 // - Topic list
 //   - Suggested topics
 
@@ -28,5 +29,6 @@
 @import 'common/menu-panel';
 @import 'common/notification';
 @import 'common/post';
+@import 'common/timeline';
 @import 'common/topic-list';
 @import 'common/topic-list-suggested';
