--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -24,6 +24,7 @@
 // - Dropdown
 // - Header
 // - Menu panel
+// - Progress
 // - Table
 // - Text field
 
@@ -282,6 +283,14 @@ $menu-panel-item-overlay-dark:  $dark-hover !default;
 $menu-panel-item-overlay-light: $light-hover !default;
 $menu-panel-padding-x:          24px !default;
 $menu-panel-padding-y:          20px !default;
+
+
+
+// Progress
+
+$progress-bg:     unquote('$tertiary') !default;
+$progress-height: 4px !default;
+$progress-mask:   $white-secondary !default;
 
 
 
