--- a/scss/common/_topic-list-suggested.scss
+++ b/scss/common/_topic-list-suggested.scss
@@ -1,6 +1,5 @@
 #suggested-topics {
-  margin-top: $card-margin-y;
-  margin-bottom: $card-margin-y;
+  margin-bottom: $spacer-lg;
   padding: 0;
 
   h3 {
