--- a/common/common.scss
+++ b/common/common.scss
@@ -812,7 +812,7 @@ aside.quote .title + blockquote {
 }
 
 #main-outlet {
-  padding-top: 72px;
+  padding-top: 80px;
 }
 
 div.logout-link a.logout .fa {
@@ -1334,6 +1334,10 @@ nav.post-controls .actions button .read-icon::before {
   margin-bottom: 16px;
 }
 
+.posts-wrapper {
+  margin-bottom: 16px;
+}
+
 .small-action {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -1432,8 +1436,7 @@ nav.post-controls .actions button .read-icon::before {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  margin-top: 8px;
-  margin-bottom: 0;
+  margin-bottom: 16px;
   padding: 0;
 }
 #topic-footer-buttons div > button.btn,
@@ -1984,6 +1987,10 @@ nav.post-controls .actions button .read-icon::before {
   padding-left: 16px;
 }
 
+#list-area {
+  margin-bottom: 24px;
+}
+
 .topic-list {
   background-color: color-chooser(#424242, #ffffff);
   border: 0;
@@ -2157,8 +2164,7 @@ nav.post-controls .actions button .read-icon::before {
 }
 
 #suggested-topics {
-  margin-top: 8px;
-  margin-bottom: 8px;
+  margin-bottom: 24px;
   padding: 0;
 }
 #suggested-topics h3 .badge-wrapper.bullet {
