--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -265,7 +265,7 @@ $header-height:             56px !default;
 $header-item-overlay-dark:  $white-divider !default;
 $header-item-overlay-light: $black-divider !default;
 $header-inner-spacer-x:     $spacer-sm !default;
-$header-margin-y:           $spacer !default;
+$header-margin-y:           $spacer-lg !default;
 $header-padding-x:          0 !default;
 $header-padding-y:          8px !default;
 
