--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -320,6 +320,7 @@ nav {
   align-items: center;
   display: flex;
   min-height: ($card-avatar-size + $card-padding-y);
+  padding-right: ($card-padding-y / 2);
   padding-bottom: 0;
   padding-left: ($card-avatar-size + $card-padding-y * 2);
 
@@ -357,7 +358,12 @@ nav {
     }
 
     a {
+      @include btn-flat;
+      @include btn-sm;
+
       color: color-chooser($white-secondary, $black-secondary);
+      padding-right: $card-inner-spacer-x;
+      padding-left: $card-inner-spacer-x;
     }
 
     .fa {
