--- a/common/common.scss
+++ b/common/common.scss
@@ -1338,6 +1338,32 @@ nav.post-controls .actions button .read-icon::before {
   margin-bottom: 16px;
 }
 
+.read-state {
+  font-size: 14px;
+  top: 0;
+  right: 0;
+}
+.read-state .fa {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+.read-state .fa-circle::before {
+  content: 'fiber_new';
+}
+
 .small-action {
   -webkit-box-align: center;
   -webkit-align-items: center;
