--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -107,6 +107,20 @@ nav {
   margin-bottom: ($spacer-lg - $card-margin-y);
 }
 
+.read-state {
+  font-size: $font-size-base;
+  top: 0;
+  right: 0;
+
+  .fa {
+    @include material-icons;
+  }
+
+  .fa-circle::before {
+    content: 'fiber_new';
+  }
+}
+
 .small-action {
   align-items: center;
   border-top: 0;
