increase `.create-topics-notice` margin

--- a/common/common.scss
+++ b/common/common.scss
@@ -2080,6 +2080,10 @@ nav.post-controls .actions button .read-icon::before {
   padding-left: 16px;
 }
 
+.create-topics-notice {
+  margin-bottom: 16px;
+}
+
 #list-area {
   margin-bottom: 24px;
 }
