--- a/common/common.scss
+++ b/common/common.scss
@@ -1678,6 +1678,79 @@ nav.post-controls .actions button .read-icon::before {
   background-color: transparent;
   border: 0;
   margin: 0;
+  position: relative;
+}
+.topic-map .buttons {
+  position: absolute;
+  top: -44px;
+  right: 0;
+}
+.topic-map .buttons .btn {
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: $primary;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+  max-width: 100%;
+  padding: 11px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin-right: 8px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+.topic-map .buttons .btn:focus {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  color: $primary;
+}
+@media (hover: hover) {
+  .topic-map .buttons .btn:hover {
+    background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+    color: $primary;
+  }
+}
+.topic-map .buttons .btn:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+}
+.topic-map .buttons .btn:focus {
+  outline: 0;
+}
+.topic-map .buttons .btn .fa {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+.topic-map .buttons .btn .fa-chevron-down::before {
+  content: 'expand_more';
+}
+.topic-map .buttons .btn .fa-chevron-up::before {
+  content: 'expand_less';
 }
 .topic-map .map-collapsed {
   display: none;
