--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -321,11 +321,38 @@ nav {
 .topic-map {
   background-color: transparent;
   border: 0;
+  margin: 0;
+  position: relative;
+
+  .buttons {
+    position: absolute;
+    top: (($btn-height + $card-inner-spacer-y / 2) * -1);
+    right: 0;
+
+    .btn {
+      @include btn-flat;
+
+      margin-right: $card-inner-spacer-x;
+      padding-right: $card-inner-spacer-x;
+      padding-left: $card-inner-spacer-x;
+
+      .fa {
+        @include material-icons;
+      }
+
+      .fa-chevron-down::before {
+        content: 'expand_more';
+      }
+
+      .fa-chevron-up::before {
+        content: 'expand_less';
+      }
+    }
+  }  
 
   .map-collapsed {
     display: none;
   }
-  margin: 0;
 }
 
 .topic-meta-data {
