--- a/common/common.scss
+++ b/common/common.scss
@@ -1680,6 +1680,58 @@ nav.post-controls .actions button .read-icon::before {
   margin: 0;
   position: relative;
 }
+.topic-map h3 {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1.428571;
+  color: $primary;
+  margin-bottom: 8px;
+}
+.topic-map h4 {
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 1.5;
+  color: $primary;
+  margin: 0 0 4px;
+}
+.topic-map section {
+  border-top: 0;
+}
+.topic-map section.avatars, .topic-map section.links, .topic-map section.map {
+  border-top: 1px solid color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12));
+}
+.topic-map .avatar {
+  height: 36px;
+  margin-right: 8px;
+  width: 36px;
+}
+.topic-map .avatars {
+  padding: 16px 16px 8px;
+}
+.topic-map .avatars .post-count {
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 1.5;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 9px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 18px;
+  padding: 0 4px;
+  top: -4.5px;
+  right: 4px;
+}
+.topic-map .avatars > div {
+  margin: 0 0 8px;
+}
 .topic-map .buttons {
   position: absolute;
   top: -44px;
@@ -1752,8 +1804,114 @@ nav.post-controls .actions button .read-icon::before {
 .topic-map .buttons .btn .fa-chevron-up::before {
   content: 'expand_less';
 }
+.topic-map .links {
+  padding: 16px 16px 8px;
+}
+.topic-map .link-summary {
+  margin-right: -4px;
+  margin-left: -4px;
+}
+.topic-map .link-summary a {
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: $primary;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+  max-width: 100%;
+  padding: 11px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  margin-right: 8px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+.topic-map .link-summary a:focus {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  color: $primary;
+}
+@media (hover: hover) {
+  .topic-map .link-summary a:hover {
+    background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+    color: $primary;
+  }
+}
+.topic-map .link-summary a:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+}
+.topic-map .link-summary a:focus {
+  outline: 0;
+}
+.topic-map .map {
+  padding: 0 8px;
+}
+.topic-map .map a {
+  line-height: 1;
+  vertical-align: middle;
+}
+.topic-map .map li {
+  padding: 16px 8px;
+}
+.topic-map .map li:nth-child(3), .topic-map .map li.secondary {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: column-reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+.topic-map .map ul {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.topic-map .map .avatar {
+  height: 19.999994px;
+  width: 19.999994px;
+}
+.topic-map .map .number {
+  font-size: 19.999994px;
+  line-height: 1;
+  margin-top: 1px;
+}
 .topic-map .map-collapsed {
   display: none;
+}
+.topic-map .topic-links .badge-notification {
+  margin: 0 8px 0 0;
+}
+.topic-map .topic-links span.domain {
+  font-size: .857142857em;
+}
+.topic-map .topic-links td {
+  padding: 0 0 8px;
+}
+.topic-map .topic-links .topic-link {
+  margin-right: 8px;
 }
 
 .topic-meta-data {
