WIP: post styles
update styles for poll

--- a/common/common.scss
+++ b/common/common.scss
@@ -347,11 +347,6 @@ pre .hljs {
   padding: 0;
 }
 
-div.poll {
-  margin-top: 0;
-  margin-bottom: 16px;
-}
-
 .topic-body .contents .cooked {
   margin-right: -16px;
   margin-left: -16px;
@@ -500,6 +495,127 @@ aside.quote .title .avatar {
 }
 aside.quote .title + blockquote {
   border-radius: 0 0 2px 2px;
+}
+
+div.poll {
+  background-color: color-chooser(#212121, #f5f5f5);
+  border: 0;
+  margin: 0 -16px 16px;
+  width: calc(100% + 32px);
+}
+div.poll li[data-poll-option-id] {
+  margin-bottom: 16px;
+  padding: 0;
+}
+div.poll li[data-poll-option-id]:last-child {
+  margin-bottom: 0;
+}
+div.poll li[data-poll-option-id] .fa {
+  font-family: 'Material Icons';
+  -webkit-font-feature-settings: 'liga';
+          font-feature-settings: 'liga';
+  font-size: 1.714286em;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: normal;
+  line-height: 0.583333em;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  vertical-align: -0.302198em;
+  white-space: nowrap;
+  word-wrap: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  margin-right: 8px;
+}
+div.poll li[data-poll-option-id] .fa-check-square-o::before {
+  color: $tertiary;
+  content: 'check_box';
+}
+div.poll li[data-poll-option-id] .fa-square-o::before {
+  content: 'check_box_outline_blank';
+}
+div.poll .btn {
+  background-color: transparent;
+  background-image: none;
+  border: 0;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: $primary;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+  max-width: 100%;
+  padding: 11px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+div.poll .btn:focus {
+  background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+  color: $primary;
+}
+@media (hover: hover) {
+  div.poll .btn:hover {
+    background-color: color-chooser(rgba(204, 204, 204, 0.125), rgba(153, 153, 153, 0.2));
+    color: $primary;
+  }
+}
+div.poll .btn:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
+}
+div.poll .btn:focus {
+  outline: 0;
+}
+div.poll .poll-buttons {
+  padding: 8px 8px;
+}
+div.poll .poll-buttons .btn {
+  margin-left: 8px;
+}
+div.poll .poll-buttons .btn:first-child {
+  margin-left: 0;
+}
+div.poll .poll-container {
+  padding: 16px 16px;
+}
+div.poll .poll-info {
+  border-left-color: color-chooser(#000000, #e0e0e0);
+  color: $primary;
+  padding: 16px 16px;
+}
+div.poll .poll-info p {
+  margin: 16px 0;
+}
+div.poll .poll-info p:first-child {
+  line-height: 1;
+  margin-top: 0;
+}
+div.poll .poll-info p:last-child {
+  margin-bottom: 0;
+}
+div.poll .poll-info .info-number {
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 1.333333;
+}
+div.poll .poll-info .info-text {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1.428571;
 }
 
 .dropdown-menu {
