--- a/scss/common/_post.scss
+++ b/scss/common/_post.scss
@@ -6,8 +6,8 @@ nav {
       float: none;
       margin-right: ($card-inner-spacer-x * -1);
       margin-left: ($card-inner-spacer-x * -1);
-      padding-top: ($card-inner-spacer-y / 2);
-      padding-bottom: ($card-inner-spacer-y / 2);
+      padding-top: ($card-padding-y / 2);
+      padding-bottom: ($card-padding-y / 2);
       text-align: left;
 
       button {
