add mixin to choose text colour dynamically based on bg colour

--- a/common/common.scss
+++ b/common/common.scss
@@ -10,6 +10,14 @@
   }
 }
 
+@function color-dynamic($color) {
+  @if lightness($color) > 75 {
+    @return $primary;
+  } @else {
+    @return #ffffff;
+  }
+}
+
 *,
 *::after,
 *::before {
